--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                       ></a>
                     </li>
                     <li>
-                      <a href=""
+                      <a href="https://www.linkedin.com/in/ayub-shahab-98b950202/" target = "_blank"
                         ><span class="ico-circle"
                           ><ion-icon name="logo-linkedin"></ion-icon></span
                       ></a>
